feat: add distribution statuses from EU
